<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimary"
    tools:context=".SeconActivityCal4">

    <ProgressBar
        android:id="@+id/progress_loader"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18.5dp"
            android:fontFamily="@font/fredoka_bold"
            android:text="@string/select_your_orientation"
            android:textColor="?colorOnPrimary"
            android:textSize="32sp"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bsc4"
                android:backgroundTint="?colorOnPrimary"
                android:layout_width="155dp"
                android:layout_height="63dp"
                android:layout_marginEnd="5dp"
                android:elevation="8dp"
                android:text="@string/sciences"
                android:fontFamily="@font/fredoka_bold"
                android:textColor="?colorPrimary"
                android:textSize="16sp"
                app:cornerRadius="80dp"
                tools:ignore="RtlHardcoded"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/bma4"
                android:backgroundTint="?colorOnPrimary"
                android:layout_width="155dp"
                android:layout_height="63dp"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/fredoka_bold"
                android:elevation="8dp"
                android:text="@string/math"
                android:textColor="?colorPrimary"
                android:textSize="16sp"
                app:cornerRadius="80dp"
                tools:ignore="RtlHardcoded"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ble4"
                android:backgroundTint="?colorOnPrimary"
                android:layout_width="155dp"
                android:layout_height="63dp"
                android:layout_marginEnd="5dp"
                android:elevation="8dp"
                android:text="@string/lettres"
                android:fontFamily="@font/fredoka_bold"
                android:textColor="?colorPrimary"
                android:textSize="16sp"
                app:cornerRadius="80dp"
                tools:ignore="RtlHardcoded"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/bin4"
                android:backgroundTint="?colorOnPrimary"
                android:layout_width="155dp"
                android:layout_height="63dp"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/fredoka_bold"
                android:elevation="8dp"
                android:text="@string/info"
                android:textColor="?colorPrimary"
                android:textSize="16sp"
                app:cornerRadius="80dp"
                tools:ignore="RtlHardcoded"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:backgroundTint="?colorOnPrimary"
            android:id="@+id/bte4"
            android:layout_width="320dp"
            android:layout_height="63dp"
            android:fontFamily="@font/fredoka_bold"
            android:gravity="center"
            android:elevation="8dp"
            android:text="@string/technique"
            android:textColor="?colorPrimary"
            android:textSize="16sp"
            android:textAlignment="center"
            app:cornerRadius="80dp" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:backgroundTint="?colorOnPrimary"
            android:id="@+id/bec4"
            android:layout_width="320dp"
            android:layout_height="63dp"
            android:fontFamily="@font/fredoka_bold"
            android:gravity="center"
            android:elevation="8dp"
            android:text="@string/economie"
            android:textColor="?colorPrimary"
            android:textSize="16sp"
            android:textAlignment="center"
            app:cornerRadius="80dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>